<resources>
    <string name="app_name">BeamIt</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_no">Phone number</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_contact_list">Business Cards</string>
    <string name="title_activity_send">Share business card</string>
    <string name="title_activity_display">Business card details</string>
    <string name="search_title">Search</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="search_hint">Search contacts</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="iv_contact_photo">Contact photoUri</string>
    <string name="company">Company name</string>
    <string name="name">Full name</string>
    <string name="linkedin_url">Linkedin URL</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="linkedin_import">Linkedin import</string>
    <string name="title_activity_create_business_card">Create business card</string>
    <string name="title_activity_display_card">Contact details</string>
    <string name="action_edit_profile">Create business card</string>
    <string name="action_logout">Logout</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="invite">Invite</string>
    <string name="action_import_contact">Import contact</string>
    <string name="action_test">test</string>
    <string name="delete_account">Delete account</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="title_activity_change_password">Change password</string>
    <string name="title_activity_invite">Invite</string>
    <string name="empty_card_list">Welcome to BeamIt!\n\nReady to share your business card.\nClick on share button.\nAdd as many cards as you want.\nSave your business cards here.</string>
    <string name="share">Share</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="delete_contact">Delete contact</string>
    <string name="share_contact">Share contact</string>
    <string name="export_contact">Export contact</string>
    <string name="invite_message">Invite your friend to the app!</string>
    <string name="app_intro">Create and manage your\n business card</string>
</resources>
