<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.contactsharing.beamit.ContactListActivity">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
        <!--android:actionViewClass="android.widget.SearchView" />-->

    <item android:id="@+id/action_edit_profile"
        android:title="@string/action_edit_profile"
        android:orderInCategory="60"
        app:showAsAction="never" />

    <item android:id="@+id/action_import_contact"
        android:title="@string/action_import_contact"
        android:orderInCategory="70"
        app:showAsAction="never" />

    <item android:id="@+id/action_invite"
        android:title="@string/invite"
        android:orderInCategory="80"
        app:showAsAction="never"/>

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="90"
        app:showAsAction="never" />

    <item android:id="@+id/action_test"
        android:title="@string/action_test"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
