<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_centerVertical="true"
    tools:context="com.contactsharing.beamit.EditProfileActivity">

    <ImageView
        android:id="@+id/iv_profile_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/default_profile_photo"
        android:onClick="onClick"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@id/iv_profile_photo"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/et_name" />

    <EditText
        android:id="@+id/et_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company"
        android:layout_below="@id/et_email"/>

    <EditText
        android:id="@+id/et_linkedin_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/linkedin_url"
        android:inputType="textUri"
        android:layout_below="@id/et_company"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_linkedin_url"
        android:layout_centerHorizontal="true">
    <Button
        android:id="@+id/bt_cancel"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginEnd="10dp"
        />

    <Button
        android:id="@+id/bt_save"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/bt_cancel"/>
    </RelativeLayout>
</RelativeLayout>

    <TextView
        android:id="@+id/tv_linkedin_import"
        android:clickable="true"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkedin_import"
        android:textSize="20sp"
        android:textColor="#42A5F5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>