<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_centerVertical="true"
    tools:context="com.contactsharing.beamit.SignUpActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/et_email"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_sign_up"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_centerInParent="true"
        android:layout_below="@+id/et_password"/>

</RelativeLayout>
    <TextView
        android:id="@+id/tv_sign_in"
        android:clickable="true"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textColor="#42A5F5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>