<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_app_title"
        android:text="BeamIt"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:layout_width= "wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />
    <ImageView
        android:id="@+id/iv_signin_image"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:scaleType="centerInside"
        android:src="@drawable/business_card"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_app_title"/>
    <TextView
        android:id="@+id/tv_app_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"
        android:layout_below="@id/iv_signin_image"
        android:text="@string/app_intro"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_centerInParent="true"
        android:layout_below="@+id/tv_app_intro"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:layout_below="@+id/et_email"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_sign_in"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_centerInParent="true"
        android:layout_below="@+id/et_password"/>

    <TextView
        android:id="@+id/tv_sign_up"
        android:clickable="true"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="#42A5F5"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
